[Design] Fixed border and padding on faq > index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -116,7 +116,7 @@
               <span class="break-words flex-1 pr-2">${faq.title}</span>
               <button class="toggle-btn text-xl text-[#3B434B] w-6 h-6 flex items-center justify-center bg-[#F3D17C] rounded-full ml-2">+</button>
             </div>
-            <div class="faq-answer hidden whitespace-pre-line break-words px-6 py-4 text-[0.95rem] leading-relaxed bg-[#E8D4A2] text-[#1A2526] border-t-2 border-[#E16F2F] rounded-3xl mt-[-2px]">
+            <div class="faq-answer hidden whitespace-pre-line break-words px-6 pb-4 text-[0.95rem] leading-relaxed bg-[#E8D4A2] text-[#1A2526] border-2 border-[#E16F2F] rounded-3xl mt-[-2px]">
               ${faq.body}
             </div>
           </article>
